[metadata]
name = stepler
summary = Stepler framework
description-file = readme.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = mirantis
author-email = mos-qa@mirantis.com
home-page = http://stepler.readthedocs.io/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    stepler

[build_sphinx]
all_files = 1
source-dir = doc/source
